--- a/app/admin/view/order/channel/index.html
+++ b/app/admin/view/order/channel/index.html
@@ -69,7 +69,12 @@
             ,height:'full-140'
             ,isFilter:false
             ,iconOpen:true//是否显示图标【默认显示】
-            ,isOpenDefault:true//节点默认是展开还是折叠【默认展开】
+            ,isOpenDefault:true,//节点默认是展开还是折叠【默认展开】
+            toolbar: '#toolbar',
+            defaultToolbar: ['filter', 'exports', 'print', { //自定义头部工具栏右侧图标。如无需自定义，去除该参数即可
+                title: '提示'
+                ,layEvent: 'LAYTABLE_TIPS'
+                ,icon: 'layui-icon-tips' }]
             ,cols: [[
                 {checkbox: true, fixed: true},
                 {field: 'id', title: 'ID', width: 80, fixed: true, sort: true},
