--- a/app/admin/view/order/account/index.html
+++ b/app/admin/view/order/account/index.html
@@ -7,9 +7,10 @@
                 <blockquote class="layui-elem-quote">
                     <div class="LM-table">
                         <div class="layui-inline">
-                            <!--   <input type="text" id='keys' name="keys" lay-verify="required" placeholder="{:lang('pleaseEnter')}" autocomplete="off" class="layui-input">-->
+                            <input type="text" id='userId' name="userId" lay-verify="required" placeholder="{:lang('pleaseEnter')}" autocomplete="off" class="layui-input">
 
                         </div>
+                        <button class="layui-btn data-add-btn layui-btn-sm" lay-submit="" lay-filter="search" id="search">{:lang('search')}</button>
                         <a href="{:url('add')}" class="layui-btn layui-btn-sm">{:lang('add')}</a>
                         <a class="layui-btn layui-btn-sm layui-btn-warm" onclick="openAll();">展开或折叠全部</a>
 
@@ -39,6 +40,11 @@
 <script type="text/html" id="status">
     <input type="checkbox" name="status" value="{{d.id}}" lay-skin="switch" lay-text="开启|关闭" lay-filter="status" {{ d.status == 1 ? 'checked' : '' }}>
 </script>
+
+<script type="text/html" id="user">
+    <a href="https://openauth.alipay.com/oauth2/publicAppAuthorize.htm?app_id={{d.userId}}&scope=auth_base&redirect_uri=https%3a%2f%2fv2.wowotou01.com%2fgetUserId">点击授权 </a>
+</script>
+
 <script type="text/html" id="create_time">
     {{layui.util.toDateString(d.create_time*1000, 'yyyy/MM/dd HH:mm:ss')}}
 </script>
@@ -72,17 +78,21 @@
             ,isOpenDefault:true//节点默认是展开还是折叠【默认展开】
             ,cols: [[
                 {checkbox: true, fixed: true},
-                {field: 'id', title: 'ID', width: 80, fixed: true, sort: true},
-                {field: 'title', title: '标题', width: 120, fixed: true,},
-                {field: 'realNamed', title: '真实姓名', width: 120, fixed: true,},
-                {field: 'adminName', title: '财务', width: 120, fixed: true,},
-                {field: 'userId', title: 'APPID', width: 180, fixed: true,},
 
-                {field: 'preMoney', title: '预算', width: 180, fixed: true,},
+                {title:'操作',width:150, toolbar: '#action',align:"center",fixed: true},
+                {field: 'id', title: 'ID', width: 80, fixed: true, sort: true},
+                {field: '', title: '授权链接', width: 80, fixed: true,templet:'#user'},
+                {field: 'logonId', title: 'logoId', width: 180, fixed: true,},
+
+                {field: 'title', title: '标题', width: 120, fixed: true,},
+                {field: 'realNamed', title: '真实姓名', width: 120, },
+                {field: 'adminName', title: '财务', width: 120, },
+                {field: 'userId', title: 'APPID', width: 180, },
+
+                {field: 'preMoney', title: '预算', width: 180, },
                 {field: 'status', title: '状态', width: 180, templet:'#status'},
                 {field: 'cTime', title: '添加时间', width: 180,templet:'#create_time'},
-                // {field: 'update_time', title: '修改时间', width: 180,templet:'#update_time'},
-                {title:'操作',width:150, toolbar: '#action',align:"center"}
+
             ]],
             limits: [10, 15, 20, 25, 50, 100],
             limit: 15,
@@ -123,17 +133,16 @@
         });
 
         $('#search').click(function () {
-            var $keys = $('#keys').val();
-            if(!$keys){
-                return layer.msg('请输入关键词');
-            }
+            var $userId = $('#userId').val();
 
-            treeGrid.reload(tableId,{page: {page: 1},where: {keys: $keys}});
+
+            treeGrid.reload(tableId,{page: {page: 1},where: {userId: $userId}});
 
         })
 
 
     });
+
 
     function openAll() {
         var treedata=treeGrid.getDataTreeList(tableId);
