--- a/app/admin/view/order/bank/add.html
+++ b/app/admin/view/order/bank/add.html
@@ -76,6 +76,10 @@
                         <input type="radio" name="status" value="1" checked title="启用">
                         <input type="radio" name="status" value="0" title="禁用">
                     </div>
+                    <label class="layui-form-label">{:lang('关键字')}</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="keyword" placeholder="{:lang('pleaseEnter')}" class="layui-input">
+                    </div>
                 </div>
                 <div class="layui-form-item">
                     <div class="layui-input-inline">
