--- a/app/admin/view/order/order/index.html
+++ b/app/admin/view/order/order/index.html
@@ -79,6 +79,11 @@
             elem: '#list',
             url: '{:url("index")}',
             method: 'post',
+            toolbar: '#toolbar',
+            defaultToolbar: ['filter', 'exports', 'print', { //自定义头部工具栏右侧图标。如无需自定义，去除该参数即可
+                title: '提示'
+                ,layEvent: 'LAYTABLE_TIPS'
+                ,icon: 'layui-icon-tips' }],
             cols: [[
                 {checkbox: true, fixed: true},
                 {field:'id',title:'操作',width:200, toolbar: '#action',align:"center",fixed: true,},
@@ -86,12 +91,13 @@
                 {field: 'tradeMoney', title: '金额', width: 80, fixed: true,},
                 {field: 'orderId', title: '订单号', width: 120, fixed: true,},
                 {field: 'nickname', title: '用户', width: 120, fixed: true,},
+
+                {field: 'status', title: '状态', width: 80,templet:'#status' ,fixed: true,},
                 {field: 'adminName', title: '商户', width: 120, },
                 {field: 'skuTitle', title: '商品规格', width: 120,},
                 {field: 'postName', title: '快递', width: 120, },
                 {field: 'post_num', title: '快递号', width: 120, },
                 {field: 'productName', title: 'productName', width: 100,  },
-                {field: 'status', title: '状态', width: 80,templet:'#status' },
 
                 {field: 'mIp', title: '商户ip', width: 80 , },
                 {field: 'title', title: '类型', width: 80, },
