--- a/app/admin/view/order/pay/index.html
+++ b/app/admin/view/order/pay/index.html
@@ -7,12 +7,12 @@
                 <div class="LM-table">
                     <form class="layui-form"  >
                         <div class="layui-inline">
-                              <select id='toUserId' name="toUserId"
-                                  value="toUserId"  >
-                                  <option value="">是否分</option>
-                                  <option value="userId">未分账</option>
-                                  <option value="toUserId">分账</option>
-                              </select>
+                            <select id='toUserId' name="toUserId"
+                                    value="toUserId"  >
+                                <option value="">是否分</option>
+                                <option value="userId">分账</option>
+                                <option value="toUserId">未分账</option>
+                            </select>
 
 
                         </div>
@@ -65,11 +65,14 @@
 
 
 <script type="text/html" id="action">
+
+    <a  class="layui-btn  layui-btn-xs" lay-event="queryOrder">查询</a>
     <a  class="layui-btn  layui-btn-xs" lay-event="twicePay">{:lang('补单')}</a>
-    <a  class="layui-btn  layui-btn-xs" lay-event="forcePay">{:lang('线下补单')}</a>
+
+    <a  class="layui-btn  layui-btn-xs layui-btn-danger" lay-event="forcePay">{:lang('线下补单')}</a>
     <a  class="layui-btn  layui-btn-xs" lay-event="settle">{:lang('分账')}</a>
     <a href="{:url('detail')}?id={{d.id}}" class="layui-btn  layui-btn-xs" lay-event="detail">{:lang('详情')}</a>
-     <a  class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    <a  class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script type="text/html" id="status">
     <div>
@@ -116,13 +119,20 @@
             elem: '#list',
             url: '{:url("index")}',
             method: 'post',
+            toolbar: '#toolbar',
+            defaultToolbar: ['filter', 'exports', 'print', { //自定义头部工具栏右侧图标。如无需自定义，去除该参数即可
+                title: '提示'
+                ,layEvent: 'LAYTABLE_TIPS'
+                ,icon: 'layui-icon-tips' }],
             cols: [[
                 {checkbox: true, fixed: true},
-                {title:'操作',width:300, toolbar: '#action',align:"center",fixed: true,},
+                {title:'操作',width:360, toolbar: '#action',align:"center",fixed: true,},
                 {field: 'id', title: 'ID', width: 80, fixed: true, sort: true},
                 {field: 'tradeMoney', title: '金额', width: 80, fixed: true,},
                 {field: 'orderId', title: '订单号', width: 120, fixed: true,},
                 {field: 'mark', title: '备注', width: 180, fixed: true,},
+
+                {field: 'status', title: '状态', width: 80,templet:'#status',fixed: true,},
                 {field: 'tradeNo', title: '交易订单号', width: 120,},
                 {field: 'show', title: '显示', width: 120,},
                 {field: 'canGo', title: '可跳转', width: 80,},
@@ -130,7 +140,6 @@
                 {field: 'orderId', title: '订单号', width: 100},
                 {field: 'thirdNo', title: '三方订单号', width: 120},
 
-                {field: 'status', title: '状态', width: 80,templet:'#status'},
                 {field: 'isPay', title: '支付状态', width: 80,templet:'#pay'},
                 {field: 'username', title: '用户', width: 80},
                 {field: 'title', title: '类型', width: 80 },
@@ -171,6 +180,23 @@
                 layer.confirm('{:lang("Are you sure you want to  线下支付 it")}', function(index){
                     loading =layer.load(1, {shade: [0.1,'#fff']});
                     $.post("{:url('forcePay')}",{id:data.id},function(res){
+                        layer.close(loading);
+                        layer.close(index);
+                        if(res.code>0){
+                            layer.msg(res.msg,{time:1000,icon:1});
+
+                        }else{
+                            layer.msg(res.msg,{time:1000,icon:2});
+                        }
+                    });
+                });
+            }
+
+
+            if (obj.event=='queryOrder'){
+                layer.confirm('{:lang("Are you sure you want to  queryOrder it")}', function(index){
+                    loading =layer.load(1, {shade: [0.1,'#fff']});
+                    $.post("{:url('queryOrder')}",{id:data.id},function(res){
                         layer.close(loading);
                         layer.close(index);
                         if(res.code>0){
@@ -242,7 +268,7 @@
             var $mark = $('#mark').val();
             var $money = $('#money').val();
             tableIn.reload({ page: {page: 1},where: {toUserId: toUserId,isPay:isPay,id:$id,orderId:$orderId
-            ,mark:$mark,money:$money}});
+                    ,mark:$mark,money:$money}});
 
         })
 
