--- a/app/admin/view/order/post/index.html
+++ b/app/admin/view/order/post/index.html
@@ -63,6 +63,11 @@
             elem: '#list',
             url: '{:url("index")}',
             method: 'post',
+            toolbar: '#toolbar',
+            defaultToolbar: ['filter', 'exports', 'print', { //自定义头部工具栏右侧图标。如无需自定义，去除该参数即可
+                title: '提示'
+                ,layEvent: 'LAYTABLE_TIPS'
+                ,icon: 'layui-icon-tips' }],
             cols: [[
 
                 /**
