--- a/app/finance/view/order/account/index.html
+++ b/app/finance/view/order/account/index.html
@@ -3,23 +3,25 @@
     <div class="LM-main">
         <div class="admin-main layui-anim layui-anim-upbit">
             <fieldset class="layui-elem-field layui-field-title">
-                <legend>{:lang('list')}</legend>
+                <legend>账号{:lang('list')}</legend>
                 <blockquote class="layui-elem-quote">
                     <div class="LM-table">
                         <div class="layui-inline">
-                            <!--   <input type="text" id='keys' name="keys" lay-verify="required" placeholder="{:lang('pleaseEnter')}" autocomplete="off" class="layui-input">-->
+                            <div class="layui-inline">
+                                <input type="text" id='userId' name="userId" lay-verify="required" placeholder="{:lang('pleaseEnter')}" autocomplete="off" class="layui-input">
+
+                            </div>
+                            <button class="layui-btn data-add-btn layui-btn-sm" lay-submit="" lay-filter="search" id="search">{:lang('search')}</button>
+                            <a href="{:url('add')}" class="layui-btn layui-btn-sm">{:lang('add')}</a>
+                            <a class="layui-btn layui-btn-sm layui-btn-warm" onclick="openAll();">展开或折叠全部</a>
 
                         </div>
-                        <a href="{:url('add')}" class="layui-btn layui-btn-sm">{:lang('add')}</a>
-                        <a class="layui-btn layui-btn-sm layui-btn-warm" onclick="openAll();">展开或折叠全部</a>
-
-                    </div>
-                    <!--                        <div class="layui-inline">-->
-                    <!--                            <div class="layui-input-inline">-->
-                    <!--                                <input type="text" id='keys' name="keys" lay-verify="required" placeholder="{:lang('pleaseEnter')}" autocomplete="off" class="layui-input">-->
-                    <!--                            </div>-->
-                    <!--                            <button class="layui-btn data-add-btn" lay-submit="" lay-filter="add" id="search">{:lang('search')}</button>-->
-                    <!--                        </div>-->
+                        <!--                        <div class="layui-inline">-->
+                        <!--                            <div class="layui-input-inline">-->
+                        <!--                                <input type="text" id='keys' name="keys" lay-verify="required" placeholder="{:lang('pleaseEnter')}" autocomplete="off" class="layui-input">-->
+                        <!--                            </div>-->
+                        <!--                            <button class="layui-btn data-add-btn" lay-submit="" lay-filter="add" id="search">{:lang('search')}</button>-->
+                        <!--                        </div>-->
                 </blockquote>
 
             </fieldset>
@@ -37,7 +39,7 @@
     <a  class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">{:lang('del')}</a>
 </script>
 <script type="text/html" id="status">
-    <input type="checkbox" name="status" value="{{d.id}}" lay-skin="switch" lay-text="开启|关闭" lay-filter="status" {{ d.status == 1 ? 'checked' : '' }}>
+    <input type="checkbox" name="status" value="{{d.id}}" lay-skin="switch" lay-text="开启|关闭" lay-filter="status" {{ d.status == 1 ? 'checked' : 'disabled="true"' }}     >
 </script>
 <script type="text/html" id="create_time">
     {{layui.util.toDateString(d.create_time*1000, 'yyyy/MM/dd HH:mm:ss')}}
@@ -112,9 +114,19 @@
         form.on('switch(status)', function(data){
             loading =layer.load(1, {shade: [0.1,'#fff']});
             var status = $(this).attr('checked')?0:1;
+
+            if(status==1){
+
+                layer.close(loading);
+                layer.msg('无权限',{time:1000,icon:2});
+                return;
+            }
+            var thus=this;
+
             $.post("{:url('state')}",{id:data.value,status:status},function(res){
                 layer.close(loading);
                 if(res.code>0){
+                    $(this).attr('disabled=true')
                     layer.msg(res.msg,{time:1000,icon:1});
                 }else{
                     layer.msg(res.msg,{time:1000,icon:2});
@@ -123,12 +135,10 @@
         });
 
         $('#search').click(function () {
-            var $keys = $('#keys').val();
-            if(!$keys){
-                return layer.msg('请输入关键词');
-            }
+            var $userId = $('#userId').val();
 
-            treeGrid.reload(tableId,{page: {page: 1},where: {keys: $keys}});
+
+            treeGrid.reload(tableId,{page: {page: 1},where: {userId: $userId}});
 
         })
 
